<resources>
    <string name="app_name">Aê Água!</string>
    <string name="username_or_email">Username or Email</string>
    <string name="Password">Senha</string>
    <string name="app_title">Aê Água!</string>
    <string name="app_slogan">A solução para falta da água</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="campo_vazio">Este campo nao pode ser vazio!</string>
    <string name="connection_failed">Não tem Conexão com a Internet!</string>
    <string name="userPass_failed">Usuário ou Senha inválido!</string>
    <string name="title_activity_home_maps">Map</string>
    <string name="title_activity_m__main">M_MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Perfil</string>
    <string name="title_activity_maps">Map</string>
    <string name="nome_usuario">Nome do Usuario</string>
    <string name="email_usuario">usuario@carropipa.com</string>
    <string name="cadastration_failed">Falha ao Cadatrar</string>
    <string name="take_a_picture">Tire uma foto</string>
    <string name="edt_complemento">Complemento</string>
    <string name="edt_bairro">Bairro</string>
    <string name="edt_cidade">Cidade</string>
    <string name="edt_cep">CEP</string>
    <string name="edt_lograduro">Logradouro</string>
    <string name="btn_limpar">LIMPAR</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="edt_cpf">CPF/CNPJ</string>
    <string name="solicitar_agora">SOLICITAR AGORA</string>
    <string name="edt_telefone">Telefone</string>
    <string name="edt_email">Email</string>
    <string name="edt_nome">Nome</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="err_invalid_mail">Email inválido</string>
    <string name="err_invalid_name">Nome inválido</string>
    <string name="err_invalid_lastName">sobrenome inválido</string>
    <string name="err_invalid_phoneNumber">Telefone inválido</string>
    <string name="edt_sobrenome">Sobrenome</string>
    <string name="cntDesc_userPhoto">icone para foto do usuário</string>
    <string name="cntDesc_userPhone">icone para telefone</string>
    <string name="cntDesc_userPass">icone para senha</string>
    <string name="cntDesc_userMail">icone para email</string>
    <string name="cntDesc_userName">icone para nome</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_caminhao">Pedir Caminhão</string>
    <string name="menu_pagamento">Pagamento</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>
    <string name="cntDesc_logo">Logo tipo da aplicação</string>
    <string name="cntDesc_motorista">Foto do Motorista</string>
    <string name="edt_marca_do_cam">Marca do Caminhão</string>
    <string name="edt_placa">Placa</string>
    <string name="edt_capacidade">Capacidade do Tanque</string>
    <string name="edt_cnh">Carteira de Motorista</string>
    <string name="btn_criarConta">Criar Conta</string>
    <string name="err_informUF">Porfavor Informe Sua Unidade Federativa</string>
    <string name="err_emptyField">Campo Vazio</string>
    <string name="erroNaoTemGoogleMaps">Verifique se o Google Maps está instalado em seu dispositivo</string>
    <string name="comandoAppMaps">com.google.android.apps.maps</string>
    <string name="comandoMapsActivity">com.google.android.maps.MapsActivity</string>
    <string name="str_info">AêÁgua ajuda    1º Perfil: você pode ver ou Alterar o PERFIL se não existir.   2º Solicitar: você pode solicitar um caminhão de água.</string>
    <string name="lbl_nome">Nome:</string>
    <string name="lbl_userName">nome do usuario</string>
    <string name="lbl_sobrenome">SobreNome:</string>
    <string name="lbl_userLastName">SobreNome do usuario</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_emailUser">Email do Usuario</string>
    <string name="lbl_CPF">CPF:</string>
    <string name="lbl_cpfUser">CPF do usuario</string>
    <string name="lbl_telefone">Telefone:</string>
    <string name="lbl_userTelefone">Telefone do usuario</string>
    <string name="btn_alterar">ALTERAR</string>
    <string name="lbl_motorista">Motorista:</string>
    <string name="lbl_nameMotorista">Nome do Motorista</string>
    <string name="lbl_quantidade">Quantidade:</string>
    <string name="lbl_valorQtd">valor Quantidade</string>
    <string name="lbl_ValorPago">Valor Pago:</string>
    <string name="lbl_reais">Reais</string>
    <string name="Str_About"><![CDATA[Esse Aplicativo foi feito por 2 Discentes de Barchalerado em Sistemas de Informação para ajuda na solucionar a falta de agua em certas:  ==> Felipe Caetano <==  ==>    José Vidal      <==  para a disciplina de Processo 2018.1]]></string>
    <string name="escolha_pessoa">Escolha o Tipo de Pessoa!</string>
    <string name="falha">Falha!</string>
</resources>
