<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_pagamento"
            android:icon="@drawable/ic_money_black"
            android:title="@string/menu_pagamento" />
        <item
            android:id="@+id/nav_ajuda"
            android:icon="@drawable/ic_help_black"
            android:title="@string/menu_ajuda" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_info_black"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_exit_black"
            android:title="@string/menu_sair" />

    </group>

</menu>
