<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inova.ufrpe.processos.carropipa.pagamentos.AdapterPagamentoActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="179dp"
            android:layout_height="29dp"
            android:layout_weight="1"
            android:text="Cliente:"
            android:textAlignment="textStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_pag_NomeMotorista"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_weight="1"
            android:text="Nome do Cliente"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewQuantidade"
            android:layout_width="461dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_quantidade"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_pag_qtd"
            android:layout_width="460dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_valorQtd"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewReal"
            android:layout_width="465dp"
            android:layout_height="31dp"
            android:layout_weight="1"
            android:text="@string/lbl_ValorPago"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_pag_valor"
            android:layout_width="446dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_reais"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
